--- a/configs/lstm.yaml
+++ b/configs/lstm.yaml
@@ -14,7 +14,7 @@ model:
   input_dim: 16           # per asset feature dim
   hidden_dim: 64
   num_layers: 2
-  dropout: 0.1
+  dropout: 0.2
 
 training:
   device: "cuda"
@@ -35,7 +35,7 @@ evaluation:
   out_dir: "experiments/lstm_baseline"
 
 tuning:
-  enabled: true
+  enabled: false
   hidden_dim: [32, 64]
   num_layers: [1, 2]
   dropout: [0.0, 0.1]
