xgb raw config finetuning

--- a/configs/xgb_raw.yaml
+++ b/configs/xgb_raw.yaml
@@ -8,19 +8,27 @@ data:
   lookback_window: 60
 
 tuning:
-    enabled: false
+  enabled: false        # set to true to run grid search
+  # Hyperparameter grid used when tuning.enabled is true. Each value should be a list.
+  param_grid:
+    max_depth: [3, 5, 8, 10, 12, 15]
+    learning_rate: [0.001, 0.005, 0.01, 0.03]
+    n_estimators: [100, 300, 400, 500]
+    subsample: [0.7, 0.9]
+    colsample_bytree: [0.7, 0.9]
+    reg_lambda: [0.0, 1.0]
 
 model:
   family: xgboost
   type: xgb_raw
 
   params:
-    max_depth: 3
+    max_depth: 15 #15
     learning_rate: 0.01
-    n_estimators: 300
-    subsample: 0.7
-    colsample_bytree: 0.7
-    reg_lambda: 1.0
+    n_estimators: 300 #100
+    subsample: 0.9 #0.7
+    colsample_bytree:  0.9 #0.7
+    reg_lambda: 0.0 #1.0
 
 training:
   val_start: "2016-01-01"
