--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ scikit-learn==1.5.2
 matplotlib==3.9.2
 tqdm==4.66.5
 yfinance==0.2.44
+statsmodels==0.14.3
 
 # --- Models / graph ---
 xgboost==2.1.1
