--- a/configs/gcn_sector_only.yaml
+++ b/configs/gcn_sector_only.yaml
@@ -1,19 +1,24 @@
-experiment_name: gnn_corr
+experiment_name: gcn_sector_only
 
 data:
   price_file: "data/processed/prices.parquet"
-  universe_file: "data/processed/universe.csv"   # tickers, sector, industry
+  universe_file: "data/processed/universe.csv"
   start_date: "2000-01-01"
   end_date: "2024-12-31"
-  target_horizon: 1            # next day
-  lookback_window: 60          # used for rolling features and edges
+  target_horizon: 1
+  lookback_window: 60
   corr_window: 60
-  corr_threshold: 0.4          # abs(corr) >= threshold
+  corr_threshold: 0.4
   min_history: 250
+
+graph:
+  use_corr: false
+  use_sector: true
+  use_granger: false
 
 model:
   family: gnn
-  type: gcn          # or "gat" or "tgat"
+  type: gcn
   input_dim: 32
   hidden_dim: 128
   num_layers: 3
@@ -26,16 +31,16 @@ training:
   weight_decay: 1e-5
   max_epochs: 60
   gradient_clip: 1.0
-  patience: 8                  # early stopping
+  patience: 8
   val_start: "2016-01-01"
   test_start: "2020-01-01"
   num_workers: 4
 
 loss:
-  type: "mse"                  # regression on next day excess return
+  type: "mse"
 
 evaluation:
   top_k: 20
   transaction_cost_bps: 5
   risk_free_rate: 0.0
-  out_dir: "experiments/gnn_corr"
+  out_dir: "experiments/gcn_sector_only"
