--- a/configs/gat/gat_finetune.yaml
+++ b/configs/gat/gat_finetune.yaml
@@ -13,7 +13,9 @@ model:
   attn_dropout: 0.2     # attention dropout inside GATConv
 
 data:
-  target_horizon: 5
+  target_horizon: 1
+  target_type: regression
+  target_name: log_return
   corr_window: 90
   corr_threshold: 0.3
 
