--- a/configs/gat/gat_granger_only.yaml
+++ b/configs/gat/gat_granger_only.yaml
@@ -6,6 +6,8 @@ data:
   start_date: "2000-01-01"
   end_date: "2024-12-31"
   target_horizon: 1
+  target_type: regression
+  target_name: log_return
   lookback_window: 250
   corr_window: 60
   corr_threshold: 0.4
