--- a/configs/gcn/gcn_finetune.yaml
+++ b/configs/gcn/gcn_finetune.yaml
@@ -11,7 +11,9 @@ model:
   dropout: 0.25
 
 data:
-  target_horizon: 5
+  target_horizon: 1
+  target_type: regression
+  target_name: log_return
   corr_window: 90
   corr_threshold: 0.3
 
