--- a/configs/lstm.yaml
+++ b/configs/lstm.yaml
@@ -6,6 +6,8 @@ data:
   start_date: "2000-01-01"
   end_date: "2024-12-31"
   target_horizon: 1
+  target_type: regression
+  target_name: log_return
   lookback_window: 60
   min_history: 250
 
