--- a/configs/xgb_node2vec.yaml
+++ b/configs/xgb_node2vec.yaml
@@ -5,7 +5,9 @@ data:
   universe_file: "data/processed/universe.csv"
   start_date: "2000-01-01"
   end_date: "2024-12-31"
-  target_horizon: 5   # weekly horizon for consistency across models
+  target_horizon: 1  # daily horizon for consistent labels
+  target_type: regression
+  target_name: log_return
   lookback_window: 60
   corr_window: 60
   corr_threshold: 0.4
