fix granger into directional

--- a/configs/gat/gat_corr_sector_granger.yaml
+++ b/configs/gat/gat_corr_sector_granger.yaml
@@ -17,6 +17,7 @@ graph:
   use_corr: true
   use_sector: true
   use_granger: true
+  make_undirected: false
   granger_maxlag: 5
   granger_alpha: 0.01
   granger_topk: 50
