--- a/configs/models/tgcn/ablation/03_num_layers_2.yaml
+++ b/configs/models/tgcn/ablation/03_num_layers_2.yaml
@@ -2,7 +2,7 @@ include:
   - "../base.yaml"
   - "../../../default.yaml"
 
-# Ablation: increase model depth to 2 layers for the TGCN
+# Ablation: increase model depth to 2 layers for the TGCN-static
 model:
   num_layers: 2
 
