--- a/configs/ablation/tgat/ablation_C_num_layers_2.yaml
+++ b/configs/ablation/tgat/ablation_C_num_layers_2.yaml
@@ -2,7 +2,7 @@ include:
   - "../models/tgat_base.yaml"
   - "../default.yaml"
 
-# Ablation C: increase model depth to 2 layers for the TGAT-like model
+# Ablation C: increase model depth to 2 layers for the TGAT-like static GAT
 model:
   num_layers: 2
 
