--- a/configs/ablation/tgcn/ablation_C_num_layers_2.yaml
+++ b/configs/ablation/tgcn/ablation_C_num_layers_2.yaml
@@ -2,7 +2,7 @@ include:
   - "../models/tgcn_base.yaml"
   - "../default.yaml"
 
-# Ablation C: increase model depth to 2 layers for the TGCN
+# Ablation C: increase model depth to 2 layers for the TGCN-static
 model:
   num_layers: 2
 
