--- a/configs/models/tgcn_base.yaml
+++ b/configs/models/tgcn_base.yaml
@@ -1,6 +1,6 @@
 model:
   family: gnn
-  type: tgcn
+  type: tgcn_static
   # per-model defaults (override in ablations)
   input_dim: 32
   hidden_dim: 128
