--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,74 @@
-# --- Wheel sources (keep these lines at the top) ---
---find-links https://download.pytorch.org/whl/cpu
---find-links https://data.pyg.org/whl/torch-2.3.0+cpu.html
-
-# --- Core math/DS ---
-numpy==2.02
-pandas==2.2.3
-pyarrow==17.0.0
-scikit-learn==1.5.2
-matplotlib==3.9.2
-tqdm==4.66.5
-yfinance==0.2.44
-statsmodels==0.14.3
-
-# --- Models / graph ---
-xgboost==2.1.1
-networkx==3.5
-
-# --- PyTorch (CPU on macOS) ---
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+async-timeout==5.0.1
+attrs==25.4.0
+beautifulsoup4==4.14.3
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+contourpy==1.3.0
+cramjam==2.11.0
+curl_cffi==0.13.0
+cycler==0.12.1
+Cython==3.2.3
+decorator==4.4.2
+fastparquet==2024.11.0
+filelock==3.19.1
+fonttools==4.60.1
+frozendict==2.4.7
+frozenlist==1.8.0
+fsspec==2025.10.0
+idna==3.11
+importlib_resources==6.5.2
+Jinja2==3.1.6
+joblib==1.5.2
+kiwisolver==1.4.7
+MarkupSafe==3.0.3
+matplotlib==3.9.4
+mpmath==1.3.0
+multidict==6.7.0
+multitasking==0.0.12
+networkx==3.2.1
+numpy==2.0.2
+packaging==25.0
+pandas==2.3.3
+patsy==1.0.2
+peewee==3.18.3
+pillow==11.3.0
+platformdirs==4.4.0
+propcache==0.4.1
+protobuf==6.33.2
+psutil==7.1.3
+pyarrow==21.0.0
+pycparser==2.23
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.3
+requests==2.32.5
+scikit-learn==1.6.1
+scipy==1.13.1
+six==1.17.0
+soupsieve==2.8
+statsmodels==0.14.6
+sympy==1.14.0
+threadpoolctl==3.6.0
 torch==2.3.0
-torchvision==0.18.0
+torch_cluster==1.6.3
+torch_geometric==2.5.3
+torch_geometric_temporal==0.56.2
+torch_scatter==2.1.2
+torch_sparse==0.6.18
+torch_spline_conv==1.2.2
 torchaudio==2.3.0
-
-# --- PyTorch Geometric stack ---
-torch-scatter==2.1.2
-torch-sparse==0.6.18
-torch-cluster==1.6.3
-torch-spline-conv==1.2.2
-torch-geometric==2.5.3
-torch-geometric-temporal==0.56.2
-
-# --- Notebook support (VS Code can use it) ---
-jupyter==1.0.0
+torchvision==0.18.0
+tqdm==4.67.1
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.6.0
+websockets==15.0.1
+xgboost==2.1.4
+yarl==1.22.0
+yfinance==0.2.66
+zipp==3.23.0
