fix config naming and restructuring

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,58 +1,1 @@
-data:
-  price_file: "data/processed/prices.parquet"
-  start_date: "2000-01-01"
-  end_date: "2024-12-31"
-  target_horizon: 1  # daily horizon for consistent labels
-  target_type: regression
-  target_name: log_return
-  lookback_window: 60
-  corr_window: 60
-  corr_threshold: 0.4
-  corr_top_k: 10
-  corr_min_periods: 30
-
-preprocess:
-  scale_features: true
-  scaler: "standard"
-
-graph_edges:
-  use_correlation: true
-  use_sector: true
-  use_industry: true
-  sector_weight: 0.2
-  industry_weight: 0.1
-  # Degree budgets per edge type (to avoid degree explosion when merging)
-  sector_top_k: 5
-  granger_top_k: 5
-  # Per-edge-type scalar weights applied after normalization
-  w_corr: 1.0
-  w_sector: 0.2
-  w_granger: 0.2
-  # clamp for merged (final) edge weights to prevent amplification / instability
-  max_edge_weight: 1.0
-  log_edge_stats: false
-  use_granger: false
-  use_graphical_lasso: false
-  granger_max_lag: 2
-  granger_p_threshold: 0.05
-  graphlasso_alpha: 0.01
-  graphlasso_window: 60
-
-training:
-  batch_size: 1
-  lr: 0.0005
-  weight_decay: 0.0001
-  gradient_clip: 1.0
-  max_epochs: 300
-  patience: 40
-  min_epochs: 60
-  device: "cuda"
-
-  val_start: "2016-01-01"
-  test_start: "2020-01-01"
-
-evaluation:
-  top_k: 20
-  transaction_cost_bps: 5
-  risk_free_rate: 0.0
-  out_dir: "experiments/"
+include: "configs/templates/thesis_core.yaml"
