--- a/configs/runs/ablation/tgcn/wcorr_topk.yaml
+++ b/configs/runs/ablation/tgcn/wcorr_topk.yaml
@@ -1,6 +1,7 @@
 include:
-  - "../models/tgcn_base.yaml"
-  - "../default.yaml"
+  - "configs/templates/models/tgcn_static.yaml"
+
+experiment_name: tgcn_ablation_wcorr_topk
 
 # Ablation A: increase correlation weight and neighbor budget
 graph:
@@ -15,3 +16,4 @@ training:
 
 evaluation:
   top_k: 20
+  out_dir: "experiments/ablation/tgcn/wcorr_topk"
