--- a/configs/runs/core/gat_corr_only.yaml
+++ b/configs/runs/core/gat_corr_only.yaml
@@ -46,4 +46,11 @@ evaluation:
   top_k: 20
   transaction_cost_bps: 5
   risk_free_rate: 0.0
+  backtest_policies: [1, 5]
+  primary_rebalance_freq: 1
+  results_path: "results/results.jsonl"
   out_dir: "experiments/gat_corr_only"
+
+experiment:
+  protocol_version: "v1_thesis_core"
+  enforce_protocol: true
