--- a/configs/runs/ablation/tgat/loosen_max_edge_weight.yaml
+++ b/configs/runs/ablation/tgat/loosen_max_edge_weight.yaml
@@ -1,6 +1,7 @@
 include:
-  - "../models/tgat_base.yaml"
-  - "../default.yaml"
+  - "configs/templates/models/tgat_static.yaml"
+
+experiment_name: tgat_ablation_loosen_max_edge_weight
 
 # Ablation B: loosen max_edge_weight to allow slightly stronger merged edges
 graph:
@@ -15,3 +16,4 @@ training:
 
 evaluation:
   top_k: 20
+  out_dir: "experiments/ablation/tgat/loosen_max_edge_weight"
