--- a/configs/runs/core/gat_corr_sector_granger.yaml
+++ b/configs/runs/core/gat_corr_sector_granger.yaml
@@ -1,26 +1,31 @@
-experiment_name: gcn_corr_only
+experiment_name: gat_corr_sector_granger
 
 data:
   price_file: "data/processed/prices.parquet"
-  universe_file: "data/processed/universe.csv"   # tickers, sector, industry
+  universe_file: "data/processed/universe.csv"
   start_date: "2000-01-01"
   end_date: "2024-12-31"
   target_horizon: 1
   target_type: regression
   target_name: log_return
-  lookback_window: 60
+  lookback_window: 250
   corr_window: 60
   corr_threshold: 0.4
   min_history: 250
 
 graph:
   use_corr: true
-  use_sector: false
-  use_granger: false
+  use_sector: true
+  use_granger: true
+  make_undirected: false
+  granger_maxlag: 5
+  granger_alpha: 0.01
+  granger_topk: 50
 
 model:
   family: gnn
-  type: gcn
+  type: gat
+  heads: 4
   input_dim: 32
   hidden_dim: 128
   num_layers: 3
@@ -45,4 +50,11 @@ evaluation:
   top_k: 20
   transaction_cost_bps: 5
   risk_free_rate: 0.0
-  out_dir: "experiments/gcn_corr_only"
+  backtest_policies: [1, 5]
+  primary_rebalance_freq: 1
+  results_path: "results/results.jsonl"
+  out_dir: "experiments/gat_corr_sector_granger"
+
+experiment:
+  protocol_version: "v1_thesis_core"
+  enforce_protocol: true
