--- a/configs/runs/core/gat_sector_only.yaml
+++ b/configs/runs/core/gat_sector_only.yaml
@@ -1,4 +1,4 @@
-experiment_name: gcn_sector_only
+experiment_name: gat_sector_only
 
 data:
   price_file: "data/processed/prices.parquet"
@@ -20,7 +20,8 @@ graph:
 
 model:
   family: gnn
-  type: gcn
+  type: gat
+  heads: 4
   input_dim: 32
   hidden_dim: 128
   num_layers: 3
@@ -45,4 +46,11 @@ evaluation:
   top_k: 20
   transaction_cost_bps: 5
   risk_free_rate: 0.0
-  out_dir: "experiments/gcn_sector_only"
+  backtest_policies: [1, 5]
+  primary_rebalance_freq: 1
+  results_path: "results/results.jsonl"
+  out_dir: "experiments/gat_sector_only"
+
+experiment:
+  protocol_version: "v1_thesis_core"
+  enforce_protocol: true
