--- a/configs/runs/core/gcn_corr_only.yaml
+++ b/configs/runs/core/gcn_corr_only.yaml
@@ -1,31 +1,26 @@
-experiment_name: gat_granger_only
+experiment_name: gcn_corr_only
 
 data:
   price_file: "data/processed/prices.parquet"
-  universe_file: "data/processed/universe.csv"
+  universe_file: "data/processed/universe.csv"   # tickers, sector, industry
   start_date: "2000-01-01"
   end_date: "2024-12-31"
   target_horizon: 1
   target_type: regression
   target_name: log_return
-  lookback_window: 250
+  lookback_window: 60
   corr_window: 60
   corr_threshold: 0.4
   min_history: 250
 
 graph:
-  use_corr: false
+  use_corr: true
   use_sector: false
-  use_granger: true
-  make_undirected: false
-  granger_maxlag: 5
-  granger_alpha: 0.01
-  granger_topk: 50
+  use_granger: false
 
 model:
   family: gnn
-  type: gat
-  heads: 4
+  type: gcn
   input_dim: 32
   hidden_dim: 128
   num_layers: 3
@@ -50,4 +45,11 @@ evaluation:
   top_k: 20
   transaction_cost_bps: 5
   risk_free_rate: 0.0
-  out_dir: "experiments/gat_granger_only"
+  backtest_policies: [1, 5]
+  primary_rebalance_freq: 1
+  results_path: "results/results.jsonl"
+  out_dir: "experiments/gcn_corr_only"
+
+experiment:
+  protocol_version: "v1_thesis_core"
+  enforce_protocol: true
