--- a/configs/runs/core/gcn_sector_only.yaml
+++ b/configs/runs/core/gcn_sector_only.yaml
@@ -1,4 +1,4 @@
-experiment_name: gcn_granger_only
+experiment_name: gcn_sector_only
 
 data:
   price_file: "data/processed/prices.parquet"
@@ -8,19 +8,15 @@ data:
   target_horizon: 1
   target_type: regression
   target_name: log_return
-  lookback_window: 250
+  lookback_window: 60
   corr_window: 60
   corr_threshold: 0.4
   min_history: 250
 
 graph:
   use_corr: false
-  use_sector: false
-  use_granger: true
-  make_undirected: false
-  granger_maxlag: 5
-  granger_alpha: 0.01
-  granger_topk: 50
+  use_sector: true
+  use_granger: false
 
 model:
   family: gnn
@@ -49,4 +45,11 @@ evaluation:
   top_k: 20
   transaction_cost_bps: 5
   risk_free_rate: 0.0
-  out_dir: "experiments/gcn_granger_only"
+  backtest_policies: [1, 5]
+  primary_rebalance_freq: 1
+  results_path: "results/results.jsonl"
+  out_dir: "experiments/gcn_sector_only"
+
+experiment:
+  protocol_version: "v1_thesis_core"
+  enforce_protocol: true
