--- a/configs/runs/core/lstm.yaml
+++ b/configs/runs/core/lstm.yaml
@@ -1,4 +1,4 @@
-experiment_name: lstm_baseline
+experiment_name: lstm
 
 data:
   price_file: "data/processed/prices.parquet"
@@ -13,6 +13,7 @@ data:
 
 model:
   family: lstm
+  type: lstm
   input_dim: 16           # per asset feature dim
   hidden_dim: 64
   num_layers: 2
@@ -34,7 +35,14 @@ evaluation:
   top_k: 20
   transaction_cost_bps: 5
   risk_free_rate: 0.0
-  out_dir: "experiments/lstm_baseline"
+  backtest_policies: [1, 5]
+  primary_rebalance_freq: 1
+  results_path: "results/results.jsonl"
+  out_dir: "experiments/lstm"
+
+experiment:
+  protocol_version: "v1_thesis_core"
+  enforce_protocol: true
 
 tuning:
   enabled: false
